# RISC-V-CPU-SIM

./: CMakeLists.txt  README.md  build.sh  run.sh
ScalarProcessor/: README.md  cpu.cpp
ScalarProcessor/riscv/: instruction.cpp  simulator.cpp
ScalarProcessor/riscv/include/: instruction.h  instruction.hpp  opcodes.h  opcodes.hpp  simulator.hpp
ScalarProcessor/stages/: Decode.cpp  Execute.cpp  Fetch.cpp  Memory.cpp  WriteBack.cpp
ScalarProcessor/stages/include/: Decode.h  Decode.hpp  Execute.hpp  Fetch.hpp  Memory.hpp  WriteBack.h  WriteBack.hpp
ScalarProcessor/tests/: CMakeLists.txt
ScalarProcessor/units/: CMakeLists.txt  ControlUnit.cpp  HazardUnit.cpp
ScalarProcessor/units/include/: Basics.h  Basics.hpp  ContolUnit.hpp  HazardUnit.h  HazardUnit.hpp
SuperScalarProcessor/: CMakeLists.txt  README.md  cpu.cpp
SuperScalarProcessor/common/: logger.h  macros.h
SuperScalarProcessor/riscv/: CMakeLists.txt  instruction.cpp  opcodes.cpp  simulator.cpp
SuperScalarProcessor/riscv/include/: instruction.h  opcodes.h  simulator.h
SuperScalarProcessor/stages/: CMakeLists.txt  Decode.cpp  Execute.cpp  Fetch.cpp  Memory.cpp  WriteBack.cpp
SuperScalarProcessor/stages/include/: Decode.h  Execute.h  Fetch.h  Memory.h  WriteBack.h
SuperScalarProcessor/tests/: BaseInstructionsTests.cpp  BlocksTests.cpp  CMakeLists.txt  HazardUnitTests.cpp  SuperScalarTests.cpp
SuperScalarProcessor/units/: BranchPredictor.cpp  CMakeLists.txt  ControlUnit.cpp  HazardUnit.cpp
SuperScalarProcessor/units/include/: Basics.h  BranchPredictor.h  ContolUnit.h  HazardUnit.h
src/: cpu.cpp  simulator.cpp  simulator.h
src/riscv/: instruction.cpp  instruction.h  opcodes.h
src/stages/: Decode.cpp  Decode.h  Execute.cpp  Execute.h  Fetch.cpp  Fetch.h  Memory.cpp  Memory.h  WriteBack.cpp  WriteBack.h
src/units/: Basics.h  ContolUnit.h  ControlUnit.cpp  HazardUnit.cpp  HazardUnit.h
tests/: BlocksTests.cpp  HazardUnitTests.cpp  RV32I_basics_tests.cpp  RV32I_tests.cpp
